--- a/src/Components/Styles/Left.module.css
+++ b/src/Components/Styles/Left.module.css
@@ -1,5 +1,4 @@
 .mainWapper{
-    background-color: rgb(27, 124, 209);
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -7,5 +6,50 @@
 .mainWapper .links{
     display: flex;
     flex-direction: column;
+    flex: 3;
+}
+.mainWapper .links a{
+    font-size: 1.4rem;
+    font-weight: 800;
+    list-style-type: none;
+    color: #252525;
+    text-decoration: none;
+}
 
+.mainWapper .links span{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 12px;
+    gap: 8px;
+    font-size: 1.4rem;
+    color: #252525;
+    padding: 8px; 
+}
+
+.mainWapper .links a:hover{
+    color: #0B4FF2;
+}
+
+.mainWapper .links a:active{
+    color: #0B4FF2;
+}
+
+.profile{
+    display: flex;
+    align-items: center;
+    margin: 12px;
+    gap: 8px;
+}
+.profile img{
+    width: 70px;
+    height: 70px;
+    border-radius: 60%;
+}
+
+.logout{
+    margin: 12px;
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: #252525;
 }
