--- a/src/Components/Styles/Left.module.css
+++ b/src/Components/Styles/Left.module.css
@@ -25,6 +25,8 @@
     font-size: 1.4rem;
     color: #252525;
     padding: 8px; 
+    background-color: #d9d9d9;
+    border-radius: 4px;
 }
 
 .mainWapper .links a:hover{
@@ -52,4 +54,16 @@
     font-size: 1.3rem;
     font-weight: 600;
     color: #252525;
+}
+
+.logout h3{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 4px;
+}
+
+.logout h3 a{
+    color: #252525;
+    text-decoration: none;
 }
