--- a/src/Components/Styles/Top.module.css
+++ b/src/Components/Styles/Top.module.css
@@ -3,11 +3,58 @@
 }
 
 .mainTop{
-    background-color: green;
-    
+    background-color: #0B4FF2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.userProfile{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+    margin: 20px 20px 100px 20px;
+    background-color: #ffffff57;
+    padding: 5px 40px 5px 40px;
+}
+
+.search input{
+    margin: 30px 20px;
+    width: 18rem;
+    height: 1.4rem;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.userProfile .text{
+    color: #fff;
+}
+
+.userProfile .icon{
+    font-size: 2rem;
+    color: #fff;
+}
+
+.mainTop .userProfile img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
 
 .body{
     background-color: #fff;
     height: 90%;
+}
+
+.body{
+    background-color: #DDE2ED;
+    margin-left: 10px;
+    position: relative;
+    bottom: 3rem;
+    height: 100vh;
+    border-radius: 8px;
+    padding: 12px;
 }
